# instant_math

./: .gitignore  FUNCTION_CALLING.md  MODEL_OPTIONS.md  README.md  pubspec.yaml
.claude/: settings.local.json
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/math/: expression_evaluator.dart  latex_translator.dart  math.dart  math_solver.dart  math_tools.dart
lib/models/: history_item.dart  models.dart  problem.dart  solution.dart  step.dart  user.dart
lib/providers/: ai_provider.dart
lib/screens/: formulas_screen.dart  history_screen.dart  math_function_demo_screen.dart  model_download_screen.dart  model_management_screen.dart  problem_details_screen.dart  scan_screen.dart  screens.dart  settings_screen.dart  solution_screen.dart
lib/services/: ai_service.dart  camera_service.dart  function_calling_service.dart  math_ocr_service.dart  model_manager_service.dart  model_output_filter.dart  server_service.dart  services.dart
lib/theme/: app_theme.dart  colors.dart
lib/widgets/: detected_pattern_card.dart  final_answer_card.dart  history_list_item.dart  problem_card.dart  progress_card.dart  (+3 more)
mathwizard_server/: README.md  check_cuda.ps1  pyproject.toml  run_server.ps1
mathwizard_server/app/: __init__.py  config.py  gemma_client.py  latex_normalizer.py  main.py  ocr_client.py  orchestrator.py  schemas.py  tools.py
mathwizard_server/mathwizard_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mathwizard_server/scripts/: smoke_test.py
test/: widget_test.dart
web/: index.html
(+16 files in other folders)
